# ToolBox

./: CMakeLists.txt  README.md  associate_rgb.py  convert_depth.py
data/: bgrbaseColor_1.pfm  every2_replaced_200.rgbe  newENV.hdr  newENV12864.hdr  newENV256128.hdr  newNormal.pfm  origfov_1.pfm  origfov_1.rgbe  origfov_2.rgbe  origfov_352.pfm  origfov_352.rgbe
data/SimulData/: origfov_11.pfm  origfov_13.pfm  origfov_15.pfm
data/TestData_prepare/: bgrbaseColor_1.pfm  bgrbaseColor_27.pfm  bgrbaseColor_28.pfm  bgrbaseColor_29.pfm  bgrbaseColor_30.pfm
data/checkNormal/: PFMnormal.pfm
data/poseData/: AlignTrajactory.txt  associated.txt  longerPose.txt  longerPoseSecHalf.txt  translationPart_abs_h.txt  translationPart_rel_h.txt
include/: rgbe.cpp  toolBox.h
src/: 16bitRadiance.cpp  3DhashTest.cpp  EnvMap_prepare.cpp  controlPointSelector.cpp  depthProcesing.cpp  findCorrespondence.cpp  fixTrajectory.cpp  pfmC3ToC1.cpp  pfmReader.cpp  pointSelector.cpp  radiance2RGB.cpp  readHdr.cpp  renameImages.cpp  rgbereader.cpp  saveRadianceAsPNG.cpp  smallTest.cpp  transAndCheckNormal.cpp
